--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,17 @@ dependencies:
   http: ^0.13.3
   aws_xray_api: ^2.0.0
   shared_preferences: ^2.0.6
+  carousel_slider: ^4.2.1
+  amplify_authenticator: 0.2.5
+  amplify_datastore_plugin_interface: ^0.6.14
  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.0.0
+
+
  
 flutter:
   uses-material-design: true
