--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: smartlist
-description: A new Flutter project.
+description: A new Flutter project
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
- 
+
 environment:
   sdk: '>=2.19.3 <3.0.0'
- 
+
 dependencies:
   flutter:
     sdk: flutter
@@ -33,24 +33,30 @@ dependencies:
   carousel_slider: ^4.2.1
   amplify_authenticator: 0.2.5
   amplify_datastore_plugin_interface: ^0.6.14
- 
+  amplify_core: ^0.6.14
+  collection: ^1.17.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.0.0
+  flutter_launcher_icons: ^0.9.2 # Change to 0.9.2
 
-
- 
 flutter:
   uses-material-design: true
- 
   assets:
     - assets/images/
- 
     - assets/images/Fruitsvegetables.jpg
     - assets/images/Beverages.jpg
     - assets/images/Bakery.jpg
     - assets/images/Personacare.jpg
     - assets/labels/
     - assets/images/Category.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/Grocery_bag.png"
+  adaptive_icon_foreground: "assets/images/Grocery_bag.png"
+  remove_alpha_ios: true
